// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(ContainerComponent)
  chunkedLoading={true}
  disableClusteringAtZoom={4}
  iconCreateFunction={[Function]}
  onClick={[Function]}
  removeOutsideVisibleBounds={true}
  showCoverageOnHover={false}
>
  <MapMarker
    autoOpen={false}
    draggable={false}
    isMobile={false}
    key="post-marker-100"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <ForwardRef(Box)
        width={250}
      >
        <ArticlePreviewList
          searchConditions={
            Object {
              "category": undefined,
              "marker": 100,
            }
          }
          variant="popup"
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            ここにトリビアを追加する
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="red"
    zIndexOffset={0}
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    isMobile={false}
    key="post-marker-101"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    numberOfContents={4}
    popup={
      <ForwardRef(Box)
        width={250}
      >
        <ArticlePreviewList
          searchConditions={
            Object {
              "category": undefined,
              "marker": 101,
            }
          }
          variant="popup"
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            ここにトリビアを追加する
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="red"
    zIndexOffset={0}
  />
</ForwardRef(ContainerComponent)>
`;

exports[`Shallow Snapshot Tests category is selected 1`] = `
<ForwardRef(ContainerComponent)
  chunkedLoading={true}
  disableClusteringAtZoom={4}
  iconCreateFunction={[Function]}
  onClick={[Function]}
  removeOutsideVisibleBounds={true}
  showCoverageOnHover={false}
>
  <MapMarker
    autoOpen={false}
    draggable={false}
    isMobile={false}
    key="post-marker-101"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    numberOfContents={2}
    popup={
      <ForwardRef(Box)
        width={250}
      >
        <ArticlePreviewList
          searchConditions={
            Object {
              "category": 1,
              "marker": 101,
            }
          }
          variant="popup"
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            ここにトリビアを追加する
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="red"
    zIndexOffset={0}
  />
</ForwardRef(ContainerComponent)>
`;

exports[`Shallow Snapshot Tests form is editting 1`] = `
<ForwardRef(ContainerComponent)
  chunkedLoading={true}
  disableClusteringAtZoom={4}
  iconCreateFunction={[Function]}
  onClick={[Function]}
  removeOutsideVisibleBounds={true}
  showCoverageOnHover={false}
>
  <MapMarker
    autoOpen={false}
    draggable={false}
    isMobile={false}
    key="post-marker-100"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    popup={
      <ForwardRef(Box)
        width={250}
      >
        <ArticlePreviewList
          searchConditions={
            Object {
              "category": undefined,
              "marker": 100,
            }
          }
          variant="popup"
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            ここにマーカーを置く
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="red"
    zIndexOffset={0}
  />
  <MapMarker
    autoOpen={false}
    draggable={false}
    isMobile={false}
    key="post-marker-101"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    numberOfContents={4}
    popup={
      <ForwardRef(Box)
        width={250}
      >
        <ArticlePreviewList
          searchConditions={
            Object {
              "category": undefined,
              "marker": 101,
            }
          }
          variant="popup"
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            ここにマーカーを置く
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="red"
    zIndexOffset={0}
  />
</ForwardRef(ContainerComponent)>
`;

exports[`Shallow Snapshot Tests with hiddenMarkerIds 1`] = `
<ForwardRef(ContainerComponent)
  chunkedLoading={true}
  disableClusteringAtZoom={4}
  iconCreateFunction={[Function]}
  onClick={[Function]}
  removeOutsideVisibleBounds={true}
  showCoverageOnHover={false}
>
  <MapMarker
    autoOpen={false}
    draggable={false}
    isMobile={false}
    key="post-marker-101"
    map={
      Object {
        "setView": [MockFunction],
      }
    }
    numberOfContents={4}
    popup={
      <ForwardRef(Box)
        width={250}
      >
        <ArticlePreviewList
          searchConditions={
            Object {
              "category": undefined,
              "marker": 101,
            }
          }
          variant="popup"
        />
        <ForwardRef(Box)
          sx={
            Object {
              "mt": 2,
              "textAlign": "right",
            }
          }
        >
          <ForwardRef(Button)
            onClick={[Function]}
            startIcon={<Memo />}
          >
            ここにトリビアを追加する
          </ForwardRef(Button)>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    }
    position={
      Object {
        "lat": 0,
        "lng": 0,
      }
    }
    variant="red"
    zIndexOffset={0}
  />
</ForwardRef(ContainerComponent)>
`;
